<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/map"
            app:showAsAction="always" />
        <item
            android:id="@+id/addStory"
            android:icon="@drawable/ic_add_story"
            android:title="@string/add_story"
            app:showAsAction="always" />
        <item
            android:id="@+id/settingMenu"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/setting"
                    android:title="@string/setting"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
</menu>